// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add list 1`] = `
Object {
  "deleted": 0,
  "id": 1,
  "lists": Array [
    Object {
      "boardId": 1,
      "cards": Array [],
      "deleted": 0,
      "id": 1,
      "name": "ideas",
      "order": 1,
    },
  ],
  "name": "My new project",
  "order": 0,
}
`;

exports[`can move card 1`] = `
Object {
  "deleted": 0,
  "id": 1,
  "lists": Array [
    Object {
      "boardId": 1,
      "cards": Array [],
      "deleted": 0,
      "id": 1,
      "name": "first",
      "order": 0,
    },
    Object {
      "boardId": 1,
      "cards": Array [
        Object {
          "boardId": 1,
          "deleted": 0,
          "id": 1,
          "labelId": 0,
          "listId": 2,
          "order": 1,
          "text": "free card",
        },
      ],
      "deleted": 0,
      "id": 2,
      "name": "second",
      "order": 0,
    },
  ],
  "name": "My new project",
  "order": 0,
}
`;

exports[`can move list 1`] = `
Object {
  "deleted": 0,
  "id": 1,
  "lists": Array [
    Object {
      "boardId": 1,
      "cards": Array [],
      "deleted": 0,
      "id": 2,
      "name": "second",
      "order": 2,
    },
    Object {
      "boardId": 1,
      "cards": Array [],
      "deleted": 0,
      "id": 3,
      "name": "third",
      "order": 3,
    },
    Object {
      "boardId": 1,
      "cards": Array [],
      "deleted": 0,
      "id": 1,
      "name": "first",
      "order": 4,
    },
  ],
  "name": "My new project",
  "order": 0,
}
`;

exports[`creates instance successfully 1`] = `
Object {
  "deleted": 0,
  "id": 1,
  "lists": Array [],
  "name": "Project Kangaroo",
  "order": 0,
}
`;
